# chat

./: .pdm-python  README.md  REQUIREMENTS.md  TESTPLAN.md  pyproject.toml
airflow_team/dags/: chat_dags.py  time_alarm.py
src/chat/: '  .app.py.swp  .de_app2.py.swp  .search.py.swp  50duck.py  app.py  app2.py  app3.py  de_app2.py  mj.py  mj_app.py  movie.py  movie_search.py  name.py  search.py  search_word.py  test_app.py  word_stats.py
src/chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
