[project]
name = "chat"
version = "0.20"
description = "Default template for PDM package"
authors = [
    {name = "kimpass189", email = "kimpass189@gmail.com"},
]
dependencies = [
    "kafka-python>=2.0.2",
    "textual>=0.73.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
